[003-print-mock-api] Record what landed and what was measured on the way
Spec 003 §10, added after §9 with forward pointers from §0, §1.10, §2.2, §3, §4 and §7: the files
each commit on the branch landed and where they depart from §2 to §4; the option taken in each of
D2 and D4 to D8; the eight-module table of the shipped script against each module's test-side KSP
task; why the classpath is resolved when the task runs (a multiplatform file dependency on main's
classes, and java-test-fixtures' dependency on the module itself); the configuration cache, JDK 21,
Gradle 8.14.3, FAIL_ON_PROJECT_REPOS and ${CLAUDE_SKILL_DIR} in a session; and what stays open.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>